continue system testing

--- a/app/templates/assessment.html
+++ b/app/templates/assessment.html
@@ -5,7 +5,7 @@
 
 <section>
     <div class="container">
-        <h1 class="text-center">{{ ('Complete Assessment') }}</h1>
+        <h1 class="text-center" id="assessment_title">{{ ('Complete Assessment') }}</h1>
         <div class="row justify-content-center">
             <div class="col-md-6">
                 {{ wtf.quick_form(form) }}
