--- a/app/templates/highrisk.html
+++ b/app/templates/highrisk.html
@@ -37,7 +37,7 @@
             <div class="row justify-content-center">
                 <!-- Stock block -->
                 <div class="col-md-6 col-lg-3 mb-5">
-                    <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal5">
+                    <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal5" id="high_a_box">
                         <div class="squares" style="margin-top: 20%;">
                             <div class="icon">
                                 {% if progress.high_a %}
