--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -13,6 +13,8 @@
 {% endblock %}
 
 {% block navbar %}
+<script src="https://use.fontawesome.com/releases/v5.15.3/js/all.js" crossorigin="anonymous"></script>
+
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
       	<div class="container">
         	<a class="navbar-brand" href="{{ url_for('index') }}">Peaks and Troughs</a>
@@ -89,5 +91,51 @@
 			</div>
 		</div>
 	</section>
+
+	    <!-- footer -->
+		<section>
+			<footer class="bg-dark text-center text-white">
+				<!-- Grid container -->
+				<div class="container p-4 pb-0">
+				<!-- Section: Social media -->
+				<section class="mb-4">
+					<!-- Twitter -->
+					<a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
+					><i class="fab fa-twitter"></i
+					></a>
+
+					<!-- Google -->
+					<a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
+					><i class="fab fa-google"></i
+					></a>
+
+					<!-- Instagram -->
+					<a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
+					><i class="fab fa-instagram"></i
+					></a>
+
+					<!-- Linkedin -->
+					<a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
+					><i class="fab fa-linkedin-in"></i
+					></a>
+
+					<!-- Github -->
+					<a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
+					><i class="fab fa-github"></i
+					></a>
+				</section>
+				<!-- Section: Social media -->
+				</div>
+				<!-- Grid container -->
+
+				<!-- Copyright -->
+				<div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+				© 2020 Copyright:
+				<a class="text-white" href="https://mdbootstrap.com/">MDBootstrap.com</a>
+				</div>
+				<!-- Copyright -->
+			</footer>
+		</section>
+
 
 {% endblock %}
