change the footer and background color of the blocks in feedback page

--- a/app/templates/feedback.html
+++ b/app/templates/feedback.html
@@ -20,9 +20,9 @@
         .icon{
             width: 150px;
             height: 150px;
-            background: #000000;
+            background: #212529;
             color: white;
-            font-size: x-large;
+            font-size: xx-large;
         }
 
         .icon{
@@ -34,16 +34,16 @@
 
     </style>
     <script src="https://use.fontawesome.com/releases/v5.15.3/js/all.js" crossorigin="anonymous"></script>
-    <script>
+    <!-- <script>
     function show_feedback(){
         let feedback = document.getElementById('feedback');
         let finish = document.getElementById('finish');
         finish.style.display = 'none';
         feedback.style.display='block';
     };
-    </script>
+    </script> -->
     <p>{{ test }}</p>
-    <section id="finish" style="display: block;">
+    <!-- <section id="finish" style="display: block;">
         <div class="container text-center" style="margin-top: 5%;">
             <h4>
                 You have submitted successfully!
@@ -54,8 +54,8 @@
                 <button type="button" class="btn btn-primary btn-lg btn-outline-warning" onclick="show_feedback()">Click to see Feedback</button>
             </a>
         </div>
-    </section>
-    <section id="feedback" style="display: none;">
+    </section> -->
+    <section id="feedback">
         <div class="container">
             <table>
                 <tr>
