--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -59,7 +59,7 @@
 		body, .modal-content {
 			background-color: #212529;
 		}
-		h1, h2, h3, h4, h5, h6, p, label {
+		h1, h2, h3, h4, h5, h6, p, label, th {
 			color: #FFFFFF;
 		}
 	</style>
@@ -97,43 +97,16 @@
 			<footer class="bg-dark text-center text-white">
 				<!-- Grid container -->
 				<div class="container p-4 pb-0">
-				<!-- Section: Social media -->
-				<section class="mb-4">
-					<!-- Twitter -->
-					<a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
-					><i class="fab fa-twitter"></i
-					></a>
-
-					<!-- Google -->
-					<a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
-					><i class="fab fa-google"></i
-					></a>
-
-					<!-- Instagram -->
-					<a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
-					><i class="fab fa-instagram"></i
-					></a>
-
-					<!-- Linkedin -->
-					<a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
-					><i class="fab fa-linkedin-in"></i
-					></a>
-
-					<!-- Github -->
-					<a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
-					><i class="fab fa-github"></i
-					></a>
-				</section>
-				<!-- Section: Social media -->
+					<!-- Section: Social media -->
+					<section class="mb-4">
+						<!-- Github -->
+						<a class="btn btn-outline-light btn-floating m-1" href="https://github.com/danielchegwidden/peaks-and-troughs" role="button"
+						><i class="fab fa-github"></i></a>
+						<i>Peaks and Troughs</i>
+					</section>
+					<!-- Section: Social media -->
 				</div>
 				<!-- Grid container -->
-
-				<!-- Copyright -->
-				<div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-				© 2020 Copyright:
-				<a class="text-white" href="https://mdbootstrap.com/">MDBootstrap.com</a>
-				</div>
-				<!-- Copyright -->
 			</footer>
 		</section>
 
