--- a/app/templates/learn.html
+++ b/app/templates/learn.html
@@ -9,9 +9,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js"></script>
     <script src="https://use.fontawesome.com/releases/v5.15.3/js/all.js" crossorigin="anonymous"></script>
 
-    <div class="container text-center" style="margin-top: 3%;">
+    <!-- <div class="container text-center" style="margin-top: 3%;">
         <img src="static/images/learn/learn1.jpg" width="500" height="300" alt="">
-    </div>
+    </div> -->
     <!-- Risk Section -->
     <section>
         <br>
