--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -4,8 +4,17 @@
 
 {% block styles %}
     {{ super() }}
-	<link rel="stylesheet" href="{{ url_for('static', filename='styles.css')}}">
-	<!-- <script src="{{url_for('static', filename='main.js')}}"></script> -->
+	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles.css')}}">
+
+	<!-- Bootstrap core JS-->
+	<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"></script>
+	<!-- Third party plugin JS-->
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js"></script>
+	<script src="https://use.fontawesome.com/releases/v5.15.3/js/all.js" crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script>
+
+	<script type="text/javascript" src="{{url_for('static', filename='main.js')}}"></script>
 {% endblock %}
 
 {% block title %}
@@ -55,30 +64,24 @@
 
 {% block content %}
 
-	<style>
-		body, .modal-content {
-			background-color: #212529;
-		}
-		h1, h2, h3, h4, h5, h6, p, label, th {
-			color: #FFFFFF;
-		}
-	</style>
-
-	<div style="background-image: url('http://localhost:5000/static/images/content/10.png')" class="page-holder">
-		<div class="container py-5">
-	  		<header class="text-center text-white py-5">
-				{% if not current_user.is_anonymous %}
-				<h1 class="display-4 font-weight-bold mb-4">Welcome {{ current_user.username }}!</h1>
-				{% else %}
-				<h1 class="display-4 font-weight-bold mb-4">Welcome to Peaks and Troughs!</h1>
-				{% endif %}
-				<p class="font-italic">Here is some basic information about different types of investment.</p>
-				<!-- <p class="font-italic">Snippet By <a href="https://bootstrapious.com" class="text-white">
-					<u>Bootstrapious</u></a> -->
-				</p>
-	  		</header>
+	<!-- JUMBOTRON IMAGE + TEXT -->
+	<section>
+		<div style="background-image: url('http://localhost:5000/static/images/content/10.png')" class="page-holder">
+			<div class="container py-5">
+				<header class="text-center text-white py-5">
+					{% if not current_user.is_anonymous %}
+					<h1 class="display-4 font-weight-bold mb-4">Welcome {{ current_user.username }}!</h1>
+					{% else %}
+					<h1 class="display-4 font-weight-bold mb-4">Welcome to Peaks and Troughs!</h1>
+					{% endif %}
+					<p class="font-italic">Here is some basic information about different types of investment.</p>
+					<!-- <p class="font-italic">Snippet By <a href="https://bootstrapious.com" class="text-white">
+						<u>Bootstrapious</u></a> -->
+					</p>
+				</header>
+			</div>
 		</div>
-  	</div>
+	</section>
 
     {% block app_content %}{% endblock %}
 
