--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -7,7 +7,7 @@
             <h1 class="text-center">{{ ('Sign In') }}</h1>
             <div class="row justify-content-center">
                 <div class="col-md-4">
-                    {{ wtf.quick_form(form) }} <!-- https://pythonhosted.org/Flask-Bootstrap/forms.html -->
+                    {{ wtf.quick_form(form) }}
                 </div>
             </div>
             <br>
