--- a/app/templates/construction.html
+++ b/app/templates/construction.html
@@ -4,7 +4,7 @@
 
     <section>
         <div class="container-fluid d-flex justify-content-center">
-            <h1>Content Under Construction</h1>
+            <h1><br>Content Under Construction</h1>
         </div>
     </section>
 
@@ -18,5 +18,14 @@
             </form>
         </div>
     </section>
+
+    <!-- BLANK SPACE -->
+	<section>
+		<div class="container">
+			<div class="row">
+				<br><br><br><br><br><br>
+			</div>
+		</div>
+	</section>
 
 {% endblock %}
