--- a/app/templates/highrisk.html
+++ b/app/templates/highrisk.html
@@ -12,12 +12,11 @@
                 <div class="col-md-6 col-lg-3 mb-5">
                     <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal5" id="high_a_box">
                         <div class="squares" style="margin-top: 20%;">
-                            <div class="icon">
+                            <div class="icon" style="text-align: center;">
                                 {% if progress.high_a %}
-                                <p style="color: green;" >Stocks<i class="fas fa-check fa-fw"></i></p>
-                                <!-- <div class="transparent">&radic</div> -->
+                                <p style="color: green;" >Stocks<br><i class="fas fa-check fa-fw"></i></p>
                                 {% else %}
-                                <p style="color: orange;">Stocks</p>
+                                <p style="color: orange;">Stocks<br></p>
                                 {% endif %}
                             </div>
                         </div>
@@ -27,11 +26,11 @@
                 <div class="col-md-6 col-lg-3 mb-5">
                     <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal6">
                         <div class="squares" style="margin-top: 20%;">
-                            <div class="icon">
+                            <div class="icon" style="text-align: center;">
                                 {% if progress.high_b %}
-                                <p style="color: green;" >Derivatives<i class="fas fa-check fa-fw"></i></p>
+                                <p style="color: green;" >Derivatives<br><i class="fas fa-check fa-fw"></i></p>
                                 {% else %}
-                                <p style="color: orange;">Derivatives</p>
+                                <p style="color: orange;">Derivatives<br></p>
                                 {% endif %}
                             </div>
                         </div>
@@ -41,11 +40,11 @@
                 <div class="col-md-6 col-lg-3 mb-5">
                     <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal7">
                         <div class="squares" style="margin-top: 20%;">
-                            <div class="icon">
+                            <div class="icon" style="text-align: center;">
                                 {% if progress.high_c %}
-                                <p style="color: green;">Cryptocurrency<i class="fas fa-check fa-fw"></i></p>
+                                <p style="color: green;">Cryptocurrency<br><i class="fas fa-check fa-fw"></i></p>
                                 {% else %}
-                                <p style="color: orange;">Cryptocurrency</p>
+                                <p style="color: orange;">Cryptocurrency<br></p>
                                 {% endif %}
                             </div>
                         </div>
@@ -55,11 +54,11 @@
                 <div class="col-md-6 col-lg-3 mb-5">
                     <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal8">
                         <div class="squares" style="margin-top: 20%;">
-                            <div class="icon">
+                            <div class="icon" style="text-align: center;">
                                 {% if progress.high_d %}
-                                <p style="color: green;">Risk<i class="fas fa-check fa-fw"></i></p>
+                                <p style="color: green;">Risks<br><i class="fas fa-check fa-fw"></i></p>
                                 {% else %}
-                                <p style="color: orange;">Risk</p>
+                                <p style="color: orange;">Risks<br></p>
                                 {% endif %}
                             </div>
                         </div>
