--- a/app/templates/learn.html
+++ b/app/templates/learn.html
@@ -17,4 +17,16 @@
 
     {% block risk_content %}{% endblock %}
 
+
+    <!-- BLANK SPACE -->
+    {% if space %}
+	<section>
+		<div class="container">
+			<div class="row">
+				<br><br><br><br><br><br><br><br><br><br><br>
+			</div>
+		</div>
+	</section>
+    {% endif %}
+
 {% endblock %}
