--- a/app/templates/lowrisk.html
+++ b/app/templates/lowrisk.html
@@ -14,9 +14,9 @@
                         <div class="squares" style="margin-top: 20%;">
                             <div class="icon">
                                 {% if progress.low_a %}
-                                <p style="color: green;">Bonds</p>
+                                <p style="color: green;">Bonds<br></p>
                                 {% else %}
-                                <p style="color: orange;">Bonds</p>
+                                <p style="color: orange;">Bonds<br></p>
                                 {% endif %}
                             </div>
                         </div>
@@ -28,9 +28,9 @@
                         <div class="squares" style="margin-top: 20%;">
                             <div class="icon">
                                 {% if progress.low_b %}
-                                <p style="color: green;">Cash</p>
+                                <p style="color: green;">Cash<br></p>
                                 {% else %}
-                                <p style="color: orange;">Cash</p>
+                                <p style="color: orange;">Cash<br></p>
                                 {% endif %}
                             </div>
                         </div>
@@ -42,9 +42,9 @@
                         <div class="squares" style="margin-top: 20%;">
                             <div class="icon">
                                 {% if progress.low_c %}
-                                <p style="color: green;">Art</p>
+                                <p style="color: green;">Art<br></p>
                                 {% else %}
-                                <p style="color: orange;">Art</p>
+                                <p style="color: orange;">Art<br></p>
                                 {% endif %}
                             </div>
                         </div>
@@ -56,9 +56,9 @@
                         <div class="squares" style="margin-top: 20%;">
                             <div class="icon">
                                 {% if progress.low_d %}
-                                <p style="color: green;">Property</p>
+                                <p style="color: green;">Property<br></p>
                                 {% else %}
-                                <p style="color: orange;">Property</p>
+                                <p style="color: orange;">Property<br></p>
                                 {% endif %}
                             </div>
                         </div>
