--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -83,8 +83,7 @@
 	<!-- BLANK SPACE -->
 	<section>
 		<div class="container">
-			<div class="row">
-				<br><br><br><br><br>
+			<div class="row" style="padding-top: 300px;">
 			</div>
 		</div>
 	</section>
