--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -7,13 +7,13 @@
         <div class="container text-center">
             {% if not current_user.is_anonymous %}
             <a href="{{ url_for('learn') }}">
-                <button type="button" class="btn btn-primary btn-lg btn-outline-warning">Learn</button>
+                <button type="button" class="btn btn-primary btn-lg btn-outline-warning" id="learn">Learn</button>
             </a>
             <a href="{{ url_for('assessment') }}">
-                <button type="button" class="btn btn-primary btn-lg btn-outline-warning">Assessment</button>
+                <button type="button" class="btn btn-primary btn-lg btn-outline-warning" id="assessment">Assessment</button>
             </a>
             <a href="{{ url_for('feedback') }}">
-                <button type="button" class="btn btn-primary btn-lg btn-outline-warning">Feedback</button>
+                <button type="button" class="btn btn-primary btn-lg btn-outline-warning" id="feedback">Feedback</button>
             </a>
             <br><br>
             {% endif %}
