--- a/app/templates/learn.html
+++ b/app/templates/learn.html
@@ -22,8 +22,7 @@
     {% if space %}
 	<section>
 		<div class="container">
-			<div class="row">
-				<br><br><br><br><br><br><br><br><br><br><br>
+			<div class="row"  style="padding-top: 100px;">
 			</div>
 		</div>
 	</section>
