--- a/app/templates/feedback.html
+++ b/app/templates/feedback.html
@@ -3,7 +3,7 @@
 {% block app_content %}
 
     <section class="py-3" id="results">
-		<div class="container" id="table_results">
+		<div class="container" id="table_summary">
 			<table class="table table-dark table-bordered table-hover">
 				<thead class="thead-light">
 					<tr>
