--- a/app/templates/highrisk.html
+++ b/app/templates/highrisk.html
@@ -88,7 +88,7 @@
                                     <!-- Stocks - Title-->
                                     <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="stocksTitle">Stocks</h2>
                                     <!-- Stocks - Image-->
-                                    <img class="img-fluid rounded mb-5" src="static/images/content/stonks.png" alt="Stonks" style="margin-top: 5%;"/>
+                                    <img class="img-fluid rounded mb-5" src="static/images/stonks.png" alt="Stonks" style="margin-top: 5%;"/>
                                     <!-- Stocks - Text-->
                                     <p class="mb-5 text-justify" id="stocksContent"></p>
                                     <form action="" method="post">
@@ -114,7 +114,7 @@
                                     <!-- Derivatives - Title-->
                                     <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="derivativesTitle">Derivatives</h2>
                                     <!-- Derivatives - Image-->
-                                    <img class="img-fluid rounded mb-5" src="static/images/content/derivatives.png" alt="Derivatives" style="margin-top: 5%;"/>
+                                    <img class="img-fluid rounded mb-5" src="static/images/derivatives.png" alt="Derivatives" style="margin-top: 5%;"/>
                                     <!-- Derivatives - Text-->
                                     <p class="mb-5 text-justify" id="derivativesContent"></p>
                                     <form action="" method="post">
@@ -140,7 +140,7 @@
                                     <!-- Cryptocurrency - Title-->
                                     <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="cryptocurrencyTitle">Cryptocurrency</h2>
                                     <!-- Cryptocurrency - Image-->
-                                    <img class="img-fluid rounded mb-5" src="static/images/content/cryptocurrency.png" alt="Cryptocurrency" style="margin-top: 5%;"/>
+                                    <img class="img-fluid rounded mb-5" src="static/images/cryptocurrency.png" alt="Cryptocurrency" style="margin-top: 5%;"/>
                                     <!-- Cryptocurrency - Text-->
                                     <p class="mb-5 text-justify" id="cryptoContent"></p>
                                     <form action="" method="post">
@@ -166,7 +166,7 @@
                                     <!-- Risk - Title-->
                                     <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="risksTitle">Risks</h2>
                                     <!-- Risk - Image-->
-                                    <img class="img-fluid rounded mb-5" src="static/images/content/risks.png" alt="Risks" style="margin-top: 5%;"/>
+                                    <img class="img-fluid rounded mb-5" src="static/images/risks.png" alt="Risks" style="margin-top: 5%;"/>
                                     <!-- Risk - Text-->
                                     <p class="mb-5 text-justify" id="risksContent"></p>
                                     <form action="" method="post">
